@@ -1,10 +1,0 @@
-if __name__=='__main__':
-    from rlbidi import log2vis, reorderMap
-    V2L = [1,2,3]
-    L2V = ['a','b','c']
-    logical = b'\xd8\xb5\xd9\x90\xd8\xb1\xd9\x8e\xd8\xa7\xd8\xb7\xd9\x8e \xd8\xa7\xd9\x84\xd9\x91\xd9\x8e\xd8\xb0\xd9\x90\xd9\x8a\xd9\x86\xd9\x8e \xd8\xa7\xd9\x8e\xd9\x86\xd9\x92\xd8\xb9\xd9\x8e\xd9\x85\xd9\x92\xd8\xaa\xd9\x8e \xd8\xb9\xd9\x8e\xd9\x84\xd9\x8e\xd9\x8a\xd9\x87\xd9\x90\xd9\x85\xd9\x92 \xd8\xba\xd9\x8e\xd9\x8a\xd9\x92\xd8\xb1\xd9\x90 \xd8\xa7\xd9\x84\xd9\x92\xd9\x85\xd9\x8e\xd8\xba\xd9\x92\xd8\xb6\xd9\x8f\xd9\x88\xd8\xa8\xd9\x90 \xd8\xb9\xd9\x8e\xd9\x84\xd9\x8e\xd9\x8a\xd9\x92\xd9\x87\xd9\x90\xd9\x85 \xd9\x88\xd9\x8e \xd9\x84\xd9\x8e\xd8\xa7 \xd8\xa7\xd9\x84\xd8\xb6\xd9\x91\xd9\x8e\xd9\x93\xd8\xa7\xd9\x84\xd9\x91\xd9\x90\xd9\x8a\xd9\x86\xd9\x8e'
-    visual = log2vis(logical, positions_L_to_V=L2V, positions_V_to_L=V2L, clean=True)
-    print(f'{L2V=}\n{V2L=}')
-
-    om = reorderMap(logical)
-    print(f'{ om=}')
