@@ -1,3 +1,6 @@
+20250301	0.0.2
+			fix string base_direction error check
+			remove unwanted extra layer of C functions
 20250301	0.0.1
 			copied from https://pyfribidi.sourceforge.net/
 			setup.py sdist & pip wheel -w dist . work
